# brain

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  bootstrap  configure  configure.ac
conf/: brain.conf
data/: brain.conf
data/thoughts/: cant-understand  hello.rb  hello.sh  like-something
docs/: INTERIM  JoshOSXNotes.txt
ides/xcode/brain/brain.xcodeproj/: project.pbxproj
ides/xcode/brain/brain.xcodeproj/project.xcworkspace/xcshareddata/: brain.xccheckout
ides/xcode/braind/braind.xcodeproj/: project.pbxproj
ides/xcode/braind/braind.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ides/xcode/braind/braind.xcodeproj/project.xcworkspace/xcshareddata/: braind.xccheckout
ides/xcode/brsh/brsh.xcodeproj/: project.pbxproj
ides/xcode/brsh/brsh.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ides/xcode/brsh/brsh.xcodeproj/project.xcworkspace/xcshareddata/: brsh.xccheckout
ides/xcode/thought/thought.xcodeproj/: project.pbxproj
ides/xcode/thought/thought.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ides/xcode/thought/thought.xcodeproj/project.xcworkspace/xcshareddata/: thought.xccheckout
includes/: client.h  nlip.h  protocol.h
src/: compile.h  compile.h.in  config.h  fatal.h  protocol-int.h  protocol.h
src/braind/: braind.c  conf.c  conf.h  err.h  event.c  log.c  log.h  server.c  server.h
src/brsh/: brsh.c  client.c  client.h  error.c  error.h  event.c  event.h  ui.c  ui.h
src/client/: client-int.h  client.c  client.h  setup.c
src/cont/: array.c  array.h  glue.c  glue.h  hashmap.c  hashmap.h  ptrset.c  ptrset.h  set.c  set.h
src/dev/: main.c
src/intl/: utf8.c  utf8.h
src/kn/: bootstrap.c  common.h  concept.c  kn.c  kn.h  nl.c  pattern.c  structs.h
src/mem/: alloc.c  alloc.h
src/nl/: common.h  context.h  debug.c  detmean.c  genutt.c  init.c  input.h  iparse.c  iplug.c  isplit.c  itok.c  iwizer.c  nl.h  parts.c  parts.h
src/nl/plug/: acronyms.c  builtins.c  datetimes.c  emoticons.c  numbers.c  sentences.c  wordizer.c  words.c
src/tests/: main.c  nl-parse.c
src/thought/: thought.1  thought.c
src/utf8/: utf8.c  utf8.h
src/util/: conf.c  conf.h  confscan.c  confscan.h  file-read.c  file-read.h  ifsai.c  ifsai.h  sbuff.c  sbuff.h  util.c  util.h
