# process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = 	brsh
brsh_SOURCES = 	src/brsh/brsh.c \
				src/brsh/error.c \
				src/brsh/event.c \
				src/brsh/ui.c \
				src/client/client.c \
				src/client/setup.c \
				src/util/conf.c \
				src/util/confscan.c \
				src/util/util.c \
				src/mem/alloc.c \
				\
				src/config.h \
				src/fatal.h \
				src/protocol-int.h \
				src/brsh/event.h \
				src/brsh/ui.h \
				src/client/client-int.h \
				src/util/conf.h \
				src/util/confscan.h \
				src/util/util.h \
				src/mem/alloc.h
